--- a/reports/mono-2.0/HPLT-v2-srd_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-srd_Latn.yaml
@@ -113,8 +113,7 @@ docs_wds: '[[5, 1533], [5.1, 1465], [5.2, 1370], [5.3, 1257], [5.4, 1285], [5.5,
   972], [8.9, 1103], [9, 863], [9.1, 844], [9.2, 565], [9.3, 419], [9.4, 341], [9.5,
   245], [9.6, 133], [9.7, 147], [9.8, 54], [9.9, 19], [10, 4]]'
 corpus: srd_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 144694, "no_urls": 13213, "no_bad_encoding":
-  142, "pii": 1528}'
+hardrules_tags: '{"not_too_long": 16745, "not_too_short": 145185, "no_urls": 14710, "no_bad_encoding": 150,   "pii": 1528}'
 sentence_pairs: 917090
 src_bytes: 143.62 MB
 src_chars: 147885449
