Updated reports for Slovene

--- a/reports/mono-1.2/HPLT-v1.2-sl.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-sl.lite.yaml
@@ -2225,3 +2225,4 @@ srclang: sl
 timestamp: 1717866641.588944
 unique_sents: 61611773
 warnings: []
+hardrules_tags: '{"not_too_long": 811775, "not_too_short": 125966250, "no_urls": 6161393, "no_bad_encoding": 4396}'
