Updated reports for Gujarati

--- a/reports/mono-1.2/HPLT-v1.2-gu.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-gu.yaml
@@ -246,8 +246,7 @@ docs_wds: '[[0.0, 11742], [0.1, 442], [0.2, 450], [0.3, 501], [0.4, 580], [0.5, 
   2229], [8.6, 1887], [8.7, 1717], [8.8, 1548], [8.9, 1143], [9.0, 982], [9.1, 853],
   [9.2, 717], [9.3, 517], [9.4, 419], [9.5, 311], [9.6, 202], [9.7, 145], [9.8, 54],
   [9.9, 19], [10.0, 5]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 15146871, "no_urls": 484595,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 74812, "not_too_short": 15145912, "no_urls": 483376, "no_bad_encoding": 694}'
 monocleaner_scores: '[[0.0, 1680713], [0.1, 547961], [0.2, 1059184], [0.3, 1556730],
   [0.4, 3012867], [0.5, 4548867], [0.6, 6668281], [0.7, 7147223], [0.8, 5344279],
   [0.9, 1176808]]'
