--- a/reports/mono-2.0/HPLT-v2-bam_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-bam_Latn.yaml
@@ -70,8 +70,7 @@ docs_wds: '[[5, 96], [5.1, 101], [5.2, 116], [5.3, 78], [5.4, 79], [5.5, 108], [
   199], [8.6, 402], [8.7, 195], [8.8, 164], [8.9, 96], [9, 74], [9.1, 87], [9.2, 1],
   [9.3, 2], [9.4, 2], [9.5, 1], [9.6, 1]]'
 corpus: bam_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 8214, "no_urls": 385, "no_bad_encoding":
-  10, "pii": 25}'
+hardrules_tags: '{"not_too_long": 2761, "not_too_short": 17269, "no_urls": 497, "no_bad_encoding": 16,   "pii": 25}'
 sentence_pairs: 91722
 src_bytes: 21.25 MB
 src_chars: 20651317
