Updated reports for Bulgarian

--- a/reports/mono-1.2/HPLT-v1.2-bg.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-bg.lite.yaml
@@ -2332,3 +2332,4 @@ srclang: bg
 timestamp: 1717978933.2602766
 unique_sents: 111449765
 warnings: []
+hardrules_tags: '{"not_too_long": 2556020, "not_too_short": 377083132, "no_urls": 19425516, "no_bad_encoding": 5998}'
