Updatd reports for KAzakh

--- a/reports/mono-1.2/HPLT-v1.2-kk.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-kk.yaml
@@ -332,8 +332,7 @@ docs_wds: '[[0.0, 11097], [0.1, 135], [0.2, 175], [0.3, 225], [0.4, 211], [0.5, 
   [8.5, 9373], [8.6, 8820], [8.7, 8422], [8.8, 8291], [8.9, 7510], [9.0, 7099], [9.1,
   6457], [9.2, 5869], [9.3, 5181], [9.4, 4508], [9.5, 3704], [9.6, 3009], [9.7, 1858],
   [9.8, 1020], [9.9, 379], [10.0, 63]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 22740002, "no_urls": 904637,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 207963, "not_too_short": 22738560, "no_urls": 903719, "no_bad_encoding": 290}'
 monocleaner_scores: '[[0.0, 3534967], [0.1, 973006], [0.2, 1102523], [0.3, 1425800],
   [0.4, 2346100], [0.5, 4027050], [0.6, 5248647], [0.7, 7774902], [0.8, 13025683],
   [0.9, 12234894]]'
