--- a/reports/mono-2.0/HPLT-v2-kaz_Cyrl.yaml
+++ b/reports/mono-2.0/HPLT-v2-kaz_Cyrl.yaml
@@ -359,8 +359,7 @@ docs_wds: '[[5, 15555], [5.1, 15102], [5.2, 16009], [5.3, 16136], [5.4, 19233], 
   [9.1, 58741], [9.2, 48634], [9.3, 41877], [9.4, 38871], [9.5, 35873], [9.6, 34726],
   [9.7, 27694], [9.8, 20124], [9.9, 9281], [10, 2323]]'
 corpus: kaz_Cyrl.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 9097597, "no_urls": 922813,
-  "no_bad_encoding": 563, "pii": 123665}'
+hardrules_tags: '{"not_too_long": 715449, "not_too_short": 11451970, "no_urls": 923482, "no_bad_encoding": 600,   "pii": 123665}'
 sentence_pairs: 81006479
 src_bytes: 18.78 GB
 src_chars: 11053418553
