--- a/reports/mono-2.0/HPLT-v2-tsn_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-tsn_Latn.yaml
@@ -76,8 +76,7 @@ docs_wds: '[[5, 47], [5.1, 49], [5.2, 58], [5.3, 40], [5.4, 64], [5.5, 54], [5.6
   136], [9.3, 110], [9.4, 105], [9.5, 104], [9.6, 97], [9.7, 47], [9.8, 30], [9.9,
   9]]'
 corpus: tsn_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 13090, "no_urls": 1587, "no_bad_encoding":
-  0, "pii": 124}'
+hardrules_tags: '{"not_too_long": 2540, "not_too_short": 13276, "no_urls": 1649, "no_bad_encoding": 1,   "pii": 124}'
 sentence_pairs: 132173
 src_bytes: 26.44 MB
 src_chars: 27545230
