--- a/reports/mono-2.0/HPLT-v2-bem_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-bem_Latn.yaml
@@ -71,8 +71,7 @@ docs_wds: '[[5, 82], [5.1, 68], [5.2, 61], [5.3, 76], [5.4, 89], [5.5, 96], [5.6
   [9.2, 77], [9.3, 60], [9.4, 39], [9.5, 42], [9.6, 21], [9.7, 19], [9.8, 9], [9.9,
   2]]'
 corpus: bem_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 8335, "no_urls": 859, "no_bad_encoding":
-  3, "pii": 5}'
+hardrules_tags: '{"not_too_long": 2460, "not_too_short": 12657, "no_urls": 957, "no_bad_encoding": 4,   "pii": 5}'
 sentence_pairs: 133538
 src_bytes: 31.03 MB
 src_chars: 32196810
