--- a/reports/mono-2.0/HPLT-v2-ewe_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-ewe_Latn.yaml
@@ -59,8 +59,7 @@ docs_wds: '[[5, 38], [5.1, 39], [5.2, 36], [5.3, 27], [5.4, 20], [5.5, 42], [5.6
   84], [8.6, 100], [8.7, 85], [8.8, 79], [8.9, 57], [9, 58], [9.1, 33], [9.2, 29],
   [9.3, 33], [9.4, 18], [9.5, 7], [9.6, 13], [9.7, 6], [9.8, 11]]'
 corpus: ewe_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 4438, "no_urls": 402, "no_bad_encoding":
-  223, "pii": 8}'
+hardrules_tags: '{"not_too_long": 1375, "not_too_short": 12589, "no_urls": 434, "no_bad_encoding": 254, "pii": 8}'
 sentence_pairs: 143401
 src_bytes: 22.14 MB
 src_chars: 21178005
