--- a/reports/mono-2.0/HPLT-v2-hau_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-hau_Latn.yaml
@@ -168,8 +168,7 @@ docs_wds: '[[5, 1775], [5.1, 1771], [5.2, 1999], [5.3, 2053], [5.4, 2095], [5.5,
   [8.8, 3960], [8.9, 3764], [9, 4574], [9.1, 3400], [9.2, 1965], [9.3, 1830], [9.4,
   1701], [9.5, 1737], [9.6, 1739], [9.7, 1287], [9.8, 922], [9.9, 472], [10, 128]]'
 corpus: hau_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 450027, "no_urls": 176800, "no_bad_encoding":
-  1359, "pii": 26705}'
+hardrules_tags: '{"not_too_long": 31580, "not_too_short": 561558, "no_urls": 192756, "no_bad_encoding": 1457 , "pii": 26705}'
 sentence_pairs: 5688420
 src_bytes: 820.35 MB
 src_chars: 848139069
