--- a/reports/mono-2.0/HPLT-v2-gla_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-gla_Latn.yaml
@@ -66,7 +66,7 @@ docs_segments: '[[1, 2886], [2, 3918], [3, 3998], [4, 6386], [5, 6709], [6, 6467
   1], [30444, 1], [33249, 1], [35964, 1]]'
 docs_segments_mean: 24
 docs_segments_median: 14
-docs_timestamp: 1731344274.5831752
+docs_timestamp: 1733387986.3967261
 docs_top100_domains: '[["wikipedia.org", 28883], ["ambaile.org.uk", 10664], ["bbc.co.uk",
   8723], ["bbc.com", 3242], ["learngaelic.net", 2736], ["versionsmart.news", 2189],
   ["uhi.ac.uk", 2083], ["vsaduidoma.com", 1845], ["ucc.ie", 1699], ["learngaelic.scot",
@@ -126,8 +126,8 @@ docs_wds: '[[5, 1768], [5.1, 1732], [5.2, 1905], [5.3, 1805], [5.4, 2077], [5.5,
   2704], [8.9, 2505], [9, 2150], [9.1, 1761], [9.2, 1452], [9.3, 1381], [9.4, 1163],
   [9.5, 888], [9.6, 539], [9.7, 240], [9.8, 91], [9.9, 27], [10, 8]]'
 corpus: gla_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 291771, "no_urls": 31396, "no_bad_encoding":
-  193, "pii": 4315}'
+hardrules_tags: '{"not_too_long": 21039, "not_too_short": 475160, "no_urls": 35888,
+  "no_bad_encoding": 197, "pii": 4315}'
 sentence_pairs: 3306787
 src_bytes: 471.56 MB
 src_chars: 480450664
@@ -493,8 +493,17 @@ src_unique_sents: '[[0, 1], [1, 17288], [2, 62829], [3, 60621], [4, 65800], [5, 
   [137202, 1], [142780, 1], [152553, 1], [154234, 1], [156211, 1], [156995, 1], [163500,
   1], [164167, 1], [186535, 1], [192612, 1], [192989, 1]]'
 srclang: gd
-timestamp: 1731346074.0865884
+timestamp: 1733389208.2338789
 unique_sents: 1928255
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_ngrams_gd_nostopwords
+src_ngrams: '{"1": [[["agus"], 1776239], [["ann"], 989906], [["gu"], 884596], [["h"],
+  436550], [["s"], 403330]], "2": [[["gu bheil"], 162109], [["sam bith"], 82620],
+  [["gu math"], 59991], [["gu h"], 52490], [["bu ch\u00f2ir"], 45040]], "3": [[["deasaich
+  an t\u00f9s"], 54314], [["far a bheil"], 19825], [["aig a bheil"], 13763], [["ann
+  an alba"], 12798], [["aig an \u00e0m"], 11840]], "4": [[["aig an aon \u00e0m"],
+  9843], [["d\u00e8anamh cinnteach gu bheil"], 6331], [["ag r\u00e0dh gu bheil"],
+  6192], [["san \u00e0m ri teachd"], 5965], [["tuilleadh fiosrachaidh mu cheannach"],
+  4486]], "5": [[["fiosrachaidh mu cheannach is pr\u00ecsean"], 3577], [["os cionn
+  \u00ecre na mara"], 3223], [["d\u00f2cha gum biodh e feumail"], 2984], [["you may
+  need to install"], 2949], [["you have problems viewing them"], 2949]]}'
