--- a/reports/mono-1.2/HPLT-v1.2-si.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-si.yaml
@@ -342,8 +342,8 @@ docs_wds: '[[0.0, 17970], [0.1, 445], [0.2, 377], [0.3, 471], [0.4, 516], [0.5, 
   4778], [8.6, 4324], [8.7, 4245], [8.8, 4062], [8.9, 3787], [9.0, 3638], [9.1, 3367],
   [9.2, 2810], [9.3, 2280], [9.4, 1830], [9.5, 1444], [9.6, 1006], [9.7, 664], [9.8,
   401], [9.9, 210], [10.0, 43]]'
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 18250188, "no_urls": 793486,
-  "no_bad_encoding": 0}'
+hardrules_tags: '{"not_too_long": 154034, "not_too_short": 18250681, "no_urls": 793137, "no_bad_encoding": 1144}'
+
 monocleaner_scores: '[[0.0, 2288490], [0.1, 1070293], [0.2, 2884716], [0.3, 4089277],
   [0.4, 7269488], [0.5, 9021539], [0.6, 10173114], [0.7, 10356314], [0.8, 8387717],
   [0.9, 2377770]]'
