--- a/reports/mono-2.0/HPLT-v2-taq_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-taq_Latn.yaml
@@ -58,8 +58,7 @@ docs_wds: '[[5, 44], [5.1, 28], [5.2, 41], [5.3, 35], [5.4, 54], [5.5, 51], [5.6
   [7.9, 11], [8, 14], [8.1, 10], [8.2, 11], [8.3, 7], [8.4, 26], [8.5, 31], [8.6,
   106], [8.7, 131], [8.8, 73], [8.9, 111], [9, 99], [9.1, 49], [9.2, 3], [9.4, 1]]'
 corpus: taq_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 993, "no_urls": 40, "no_bad_encoding":
-  4, "pii": 3}'
+hardrules_tags: '{"not_too_long": 1782, "not_too_short": 4200, "no_urls": 64, "no_bad_encoding": 4, "pii": 3}'
 sentence_pairs: 13884
 src_bytes: 9.41 MB
 src_chars: 8833192
