Updated reports for Banjar (Arabic)

--- a/reports/mono-2.0/HPLT-v2-bjn_Arab.yaml
+++ b/reports/mono-2.0/HPLT-v2-bjn_Arab.yaml
@@ -16,7 +16,7 @@ docs_segments: '[[1, 1], [2, 7], [3, 35], [4, 94], [5, 160], [6, 139], [7, 105],
   [122, 1], [126, 1], [137, 3], [213, 1], [286, 1], [305, 1], [444, 5]]'
 docs_segments_mean: 18
 docs_segments_median: 8
-docs_timestamp: 1730211303.29972
+docs_timestamp: 1733410460.1043735
 docs_top100_domains: '[["utusanmelayu.com.my", 514], ["wordpress.com", 283], ["blogspot.com",
   131], ["blogspot.my", 18], ["utusantv.com", 14], ["wikisource.org", 13], ["urusniaga.my",
   9], ["unicode.org", 8], ["wikimedia.org", 8], ["tronik.org", 7], ["mnh48.com", 7],
@@ -47,7 +47,7 @@ docs_wds: '[[5, 10], [5.1, 16], [5.2, 16], [5.3, 11], [5.4, 24], [5.5, 33], [5.6
   [7.9, 45], [8, 98], [8.1, 28], [8.2, 19], [8.3, 5], [8.4, 9], [8.5, 2], [8.6, 3],
   [8.8, 1], [9, 4], [9.1, 9], [9.3, 3], [9.4, 1]]'
 corpus: bjn_Arab.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 856, "no_urls": 122, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 225, "not_too_short": 1428, "no_urls": 143, "no_bad_encoding":
   0, "pii": 5}'
 sentence_pairs: 19529
 src_bytes: 5.63 MB
@@ -148,9 +148,31 @@ src_unique_sents: '[[1, 129], [2, 136], [3, 233], [4, 195], [5, 269], [6, 260], 
   1], [1680, 1], [1708, 1], [1742, 2], [1743, 1], [6917, 1], [6983, 1], [7343, 1],
   [7438, 1], [7625, 1]]'
 srclang: bjn
-timestamp: 1730211332.409363
+timestamp: 1733410504.2231417
 unique_sents: 11025
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_bjn_nostopwords
+src_ngrams: '{"1": [[["\u064a\u06a0"], 16456], [["\u0645"], 9389], [["\u0648"], 8403],
+  [["\u0646"], 8149], [["\u064a"], 7257]], "2": [[["\u0627\u0648\u0631\u06a0 \u064a\u06a0"],
+  602], [["\u0647\u0627\u0631\u064a \u0627\u064a\u0646"], 515], [["\u0627\u06a4 \u064a\u06a0"],
+  478], [["\u064a\u06a0 \u062a\u0644\u0647"], 461], [["\u06a4\u0631\u062f\u0627\u0646
+  \u0645\u0646\u062a\u0631\u064a"], 454]], "3": [[["\u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646
+  \u062f\u0631\u0643\u0646"], 436], [["\u064a\u06a0 \u062f\u06a4\u0631\u062a\u0648\u0627\u0646
+  \u0627\u0762\u0648\u06a0"], 364], [["\u0627\u0644\u0644\u0647 \u0639\u0644\u064a\u0647
+  \u0648\u0633\u0644\u0645"], 290], [["\u0635\u0644\u0649 \u0627\u0644\u0644\u0647
+  \u0639\u0644\u064a\u0647"], 289], [["\u0627\u0644\u0644\u0647 \u0633\u0628\u062d\u0627\u0646\u0647
+  \u0648\u062a\u0639\u0627\u0644\u0649"], 239]], "4": [[["\u062f\u0631\u0643\u0646
+  \u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646"], 434],
+  [["\u0635\u0644\u0649 \u0627\u0644\u0644\u0647 \u0639\u0644\u064a\u0647 \u0648\u0633\u0644\u0645"],
+  283], [["\u0645\u0627\u0633\u064a\u0633 \u0686\u062a \u0645\u0627\u0633\u064a\u0633
+  \u0686\u062a"], 168], [["\u0686\u062a \u0645\u0627\u0633\u064a\u0633 \u0686\u062a
+  \u0645\u0627\u0633\u064a\u0633"], 154], [["\u0633\u062a\u064a\u0627\u06a4 \u0627\u0648\u0631\u06a0
+  \u0639\u062f\u0627\u0644\u0647 \u0628\u0631\u062d\u0642"], 136]], "5": [[["\u062f\u0631\u0643\u0646
+  \u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646 \u062f\u0631\u0643\u0646"],
+  432], [["\u0686\u062a \u0645\u0627\u0633\u064a\u0633 \u0686\u062a \u0645\u0627\u0633\u064a\u0633
+  \u0686\u062a"], 154], [["\u0645\u0627\u0633\u064a\u0633 \u0686\u062a \u0645\u0627\u0633\u064a\u0633
+  \u0686\u062a \u0645\u0627\u0633\u064a\u0633"], 154], [["\u0633\u062a\u064a\u0627\u06a4
+  \u0627\u0648\u0631\u06a0 \u0639\u062f\u0627\u0644\u0647 \u0628\u0631\u062d\u0642
+  \u0643\u06a4\u062f"], 128], [["\u0631\u0633\u0648\u0644 \u0627\u0644\u0644\u0647
+  \u0635\u0644\u0649 \u0627\u0644\u0644\u0647 \u0639\u0644\u064a\u0647"], 98]]}'
