--- a/reports/mono-2.0/HPLT-v2-yor_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-yor_Latn.yaml
@@ -114,8 +114,7 @@ docs_wds: '[[5, 835], [5.1, 713], [5.2, 652], [5.3, 694], [5.4, 679], [5.5, 595]
   1109], [9, 1319], [9.1, 598], [9.2, 530], [9.3, 461], [9.4, 480], [9.5, 355], [9.6,
   363], [9.7, 173], [9.8, 108], [9.9, 46], [10, 19]]'
 corpus: yor_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 185524, "no_urls": 15678, "no_bad_encoding":
-  107, "pii": 1951}'
+hardrules_tags: '{"not_too_long": 11951, "not_too_short": 185564, "no_urls": 18545, "no_bad_encoding": 4344 , "pii": 1951}'
 sentence_pairs: 1468729
 src_bytes: 241.64 MB
 src_chars: 216421805
