Updated reports for Hindi

--- a/reports/mono-1.2/HPLT-v1.2-hi.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-hi.lite.yaml
@@ -4163,3 +4163,4 @@ srclang: hi
 timestamp: 1717920494.1667151
 unique_sents: 163770347
 warnings: []
+hardrules_tags: '{"not_too_long": 1615247, "not_too_short": 304979690, "no_urls": 13483857, "no_bad_encoding": 20005}'
