--- a/reports/mono-2.0/HPLT-v2-hin_Deva.lite.yaml
+++ b/reports/mono-2.0/HPLT-v2-hin_Deva.lite.yaml
@@ -335,8 +335,7 @@ docs_wds: '[[5, 156279], [5.1, 162456], [5.2, 166998], [5.3, 186620], [5.4, 2915
   [9.4, 41868], [9.5, 35937], [9.6, 31055], [9.7, 22367], [9.8, 14393], [9.9, 6349],
   [10, 1943]]'
 corpus: HPLT-v2-hin_Deva.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 18780196, "no_urls": 2023517,
-  "no_bad_encoding": 2437, "pii": 294183}'
+hardrules_tags: '{"not_too_long": 2844911, "not_too_short": 24525846, "no_urls": 2329957, "no_bad_encoding": 2466,  "pii": 294183}'
 sentence_pairs: 267411088
 src_bytes: 101.61 GB
 src_chars: 43703795598
