Updated reports for Danish

--- a/reports/mono-1.2/HPLT-v1.2-da.lite.yaml
+++ b/reports/mono-1.2/HPLT-v1.2-da.lite.yaml
@@ -2440,3 +2440,4 @@ srclang: da
 timestamp: 1717959650.324145
 unique_sents: 164103030
 warnings: []
+hardrules_tags: '{"not_too_long": 2624664, "not_too_short": 422222491, "no_urls": 28101035, "no_bad_encoding": 11929}'
