--- a/reports/mono-2.0/HPLT-v2-kab_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-kab_Latn.yaml
@@ -89,8 +89,7 @@ docs_wds: '[[5, 225], [5.1, 221], [5.2, 224], [5.3, 168], [5.4, 191], [5.5, 185]
   [9.1, 97], [9.2, 45], [9.3, 27], [9.4, 21], [9.5, 7], [9.6, 4], [9.7, 3], [9.8,
   1]]'
 corpus: kab_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 19040, "no_urls": 2935, "no_bad_encoding":
-  114, "pii": 154}'
+hardrules_tags: '{"not_too_long": 5518, "not_too_short": 46173, "no_urls": 3411, "no_bad_encoding": 121 , "pii": 154}'
 sentence_pairs: 345218
 src_bytes: 54.55 MB
 src_chars: 53861233
