Updated reports for Magahi

--- a/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
+++ b/reports/mono-2.0/HPLT-v2-mag_Deva.yaml
@@ -18,7 +18,7 @@ docs_segments: '[[1, 4], [2, 9], [3, 19], [4, 24], [5, 37], [6, 11], [7, 7], [8,
   1], [538, 1], [556, 1]]'
 docs_segments_mean: 59
 docs_segments_median: 32
-docs_timestamp: 1730981699.7741077
+docs_timestamp: 1733428392.7982745
 docs_top100_domains: '[["blogspot.com", 109], ["khabarlahariya.org", 93], ["blogspot.in",
   49], ["jagranjunction.com", 29], ["angika.com", 11], ["unicode.org", 6], ["gotquestions.org",
   6], ["cutway.net", 6], ["astrotap.net", 5], ["wikimedia.org", 2], ["swarajkhabar.com",
@@ -36,7 +36,7 @@ docs_wds: '[[5, 11], [5.1, 17], [5.2, 13], [5.3, 9], [5.4, 6], [5.5, 9], [5.6, 9
   4], [8.5, 14], [8.6, 1], [8.7, 3], [8.8, 11], [8.9, 8], [9, 5], [9.1, 2], [9.2,
   7], [9.3, 6], [9.4, 2], [9.5, 3], [9.7, 6]]'
 corpus: mag_Deva.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 1503, "no_urls": 22, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 730, "not_too_short": 1602, "no_urls": 25, "no_bad_encoding":
   0, "pii": 0}'
 sentence_pairs: 19288
 src_bytes: 10.07 MB
@@ -187,8 +187,27 @@ src_unique_sents: '[[1, 77], [2, 180], [3, 196], [4, 331], [5, 427], [6, 302], [
   [1545, 1], [1630, 1], [1703, 1], [1756, 1], [1787, 1], [1883, 1], [2172, 1], [2181,
   1], [5553, 1]]'
 srclang: mag
-timestamp: 1730981733.140911
+timestamp: 1733428418.4925988
 unique_sents: 10798
 warnings:
 - src_fasttext
-- src_ngrams_mag_nostopwords
+src_ngrams: '{"1": [[["\u0906\u0909"], 23504], [["\u092e\u0947\u0902"], 19572], [["\u0939\u0907"],
+  15822], [["\u090a"], 11847], [["\u0928\u092f\u0901"], 11445]], "2": [[["\u0930\u0939\u0932\u0947
+  \u0939\u0932"], 2185], [["\u091c\u093e \u0939\u0907"], 1461], [["\u0915\u093f \u090a"],
+  1220], [["\u0908 \u092c\u093e\u0924"], 1163], [["\u0915\u0930\u093d \u0939\u0932\u0907"],
+  982]], "3": [[["\u091c\u093e \u0938\u0915\u093d \u0939\u0907"], 437], [["\u0928\u093e\u0930\u093e\u092f\u0923
+  \u092a\u094d\u0930\u0938\u093e\u0926 at"], 234], [["posted by \u0928\u093e\u0930\u093e\u092f\u0923"],
+  234], [["by \u0928\u093e\u0930\u093e\u092f\u0923 \u092a\u094d\u0930\u0938\u093e\u0926"],
+  234], [["\u0915\u0930\u0947 \u0915\u0947 \u091a\u093e\u0939\u0940"], 189]], "4":
+  [[["posted by \u0928\u093e\u0930\u093e\u092f\u0923 \u092a\u094d\u0930\u0938\u093e\u0926"],
+  234], [["by \u0928\u093e\u0930\u093e\u092f\u0923 \u092a\u094d\u0930\u0938\u093e\u0926
+  at"], 234], [["links to this post"], 164], [["\u0915\u0907\u0932 \u091c\u093e \u0938\u0915\u093d
+  \u0939\u0907"], 124], [["\u0938\u0948\u0928 \u090f\u0902\u091f\u094b\u0928\u093f\u092f\u094b
+  \u0921\u0947 \u0932\u093e"], 101]], "5": [[["posted by \u0928\u093e\u0930\u093e\u092f\u0923
+  \u092a\u094d\u0930\u0938\u093e\u0926 at"], 234], [["\u0938\u0948\u0928 \u090f\u0902\u091f\u094b\u0928\u093f\u092f\u094b
+  \u0921\u0947 \u0932\u093e \u0938\u0940\u090f\u090f\u0932"], 101], [["\u0938\u093e\u092e\u093e\u0928\u094d\u092f
+  \u091c\u0940\u0935 \u0935\u093f\u091c\u094d\u091e\u093e\u0928 \u092a\u094d\u0930\u0936\u094d\u0928
+  \u0909\u0924\u094d\u0924\u0930"], 57], [["\u0926\u0942\u0930\u0940 \u0938\u0948\u0928
+  \u090f\u0902\u091f\u094b\u0928\u093f\u092f\u094b \u0921\u0947 \u0932\u093e"], 50],
+  [["\u091c\u0940\u0935 \u0935\u093f\u091c\u094d\u091e\u093e\u0928 \u092a\u094d\u0930\u0936\u094d\u0928
+  \u0909\u0924\u094d\u0924\u0930 part"], 49]]}'
